crates/ruff_python_parser/tests/snapshots/invalid_syntax@param_with_invalid_default.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/param_with_invalid_default.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..68,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..20,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..15,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..14,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("x"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: Some(
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 10..14,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 11..14,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 17..20,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 17..20,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 21..43,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 25..28,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 28..38,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 29..37,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 29..30,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("x"),
                                        range: 29..30,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: Some(
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 32..36,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 33..36,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 40..43,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 40..43,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 44..67,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 48..51,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 51..62,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 52..61,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 52..53,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("x"),
                                        range: 52..53,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: Some(
                                    Yield(
                                        ExprYield {
                                            node_index: NodeIndex(None),
                                            range: 54..61,
                                            value: Some(
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 60..61,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 64..67,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 64..67,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(x=*int): ...
  |           ^^^^ Syntax Error: Starred expression cannot be used here
2 | def foo(x=(*int)): ...
3 | def foo(x=yield y): ...
  |


  |
1 | def foo(x=*int): ...
2 | def foo(x=(*int)): ...
  |            ^^^^ Syntax Error: Starred expression cannot be used here
3 | def foo(x=yield y): ...
  |


  |
1 | def foo(x=*int): ...
2 | def foo(x=(*int)): ...
3 | def foo(x=yield y): ...
  |           ^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
